Add imperatif mosellan

--- a/lecon_imperatif_m.html
+++ b/lecon_imperatif_m.html
@@ -1,51 +1,49 @@
 <p>
-L'impératif s'utilise dans les mêmes cas qu'en français (ordre, conseil ...). Il faut enlever la marque de l'infinitif -en au singulier et 
+L'impératif s'utilise dans les mêmes cas qu'en français (ordre, conseil ...). 
+Sa formation en francique est aisée.
 </p>
+
+<ul>
+  <li>
+	<p>
+	Au singulier, il faut juste enlever la marque de l'infinitif -en. 
+	</p>
+  </li>
+  <li>
+	<p> 
+	Au pluriel, on utilise la même forme qu'à l'infinitif.
+	</p>  
+  </li>
+</ul> 
+
+
 <table class="table">
   <thead>
 	<tr>
-	  <th scope="col">Verbe</th>
-	  <th scope="col">2p. sg.</th>
-	  <th scope="col">2p. sg.</th>
+	  <th scope="col">Verbe à l'infinitif</th>
+	  <th scope="col">Verbe à l'impératif 2 sg</th>
+	  <th scope="col">Verbe à l'impératif 2 pl</th>
 	  <th scope="col">Traduction</th>
 	</tr>
   </thead>
   <tbody>
 	<tr>
-	  <td> infinitif </td>
-	  <td>ich essen</td>
-	  <td>+ -en</td>
-	  <td>+ -en</td>
+	  <td> rausgehn</td>
+	  <td> Geh raus !</td>
+	  <td> Gehn raus !</td>
+	  <td> Sors/sortez !</td>
 	</tr>
 	<tr>
-	  <td>-scht</td>
-	  <td>du escht</td>
-	  <td>+ -n</td>
-	  <td>+ -en</td>
+	  <td> kommen</td>
+	  <td> Komm !</td>
+	  <td> Kommen !</td>
+	  <td> Viens/Venez!</td>
 	</tr>
 	<tr>
-	  <td>-t</td>
-	  <td>er esst</td>
-	  <td>Alternance</td>
-	  <td>+ -en</td>
-	</tr>
-	<tr>
-	  <td> infinitif </td>
-	  <td>mer essen</td>
-	  <td>Alternance</td>
-	  <td>+ -en</td>
-	</tr>
-	<tr>
-	  <td> infinitif </td>
-	  <td>der essen</td>
-	  <td>Alternance</td>
-	  <td>+ -en</td>
-	</tr>
-	<tr>
-	  <td>infinitif</td>
-	  <td>se essen</td>
-	  <td>Alternance</td>
-	  <td>+ -en</td>
+	  <td> saan</td>
+	  <td> Saa !</td>
+	  <td> Saan !</td>
+	  <td> Dis/dites !</td>
 	</tr>
   </tbody>
 </table>
