--- a/lecon_irreguliers_m.html
+++ b/lecon_irreguliers_m.html
@@ -5,6 +5,7 @@
   <thead>
 	<tr>
 	  <th scope="col">Infinitif</th>
+	  <th scope="col">Présent (er)</th>
 	  <th scope="col">Participe passé</th>
 	  <th scope="col">Traduction</th>
 	</tr>
@@ -12,103 +13,369 @@
   <tbody>
 	<tr>
 	  <th scope="row"> hängen</th>
+	  <td> hängt</td>
 	  <td> gehang</td>
 	  <td> accrocher~pendre/pendu</td>
 	</tr>
 	<tr>
 	  <th scope="row"> helfen</th>
+	  <td> helft </td>	  
 	  <td> geholf</td>
 	  <td> aider/aidé</td>
 	</tr>
 	<tr>
 	  <th scope="row"> bréngen</th>
+	  <td> bréngt </td>	  
 	  <td> gebrong</td>
 	  <td> apporter/apporté</td>
 	</tr>
 	<tr>
 	  <th scope="row"> treffen</th>
+	  <td> trefft </td>	  
 	  <td> getroff</td>
 	  <td> 1. atteindre 2. rencontrer</td>
 	</tr>
 	<tr>
 	  <th scope="row"> drénken</th>
+	  <td> drénkt </td>	  
 	  <td> gedronk</td>
 	  <td> boire</td>
 	</tr>
 	<tr>
 	  <th scope="row"> brechen</th>
+	  <td> brecht</td>	  
 	  <td> gebroch</td>
 	  <td> casser</td>
 	</tr>
 	<tr>
 	  <th scope="row"> séngen</th>
+	  <td> séngt</td>	  
 	  <td> gesong</td>
 	  <td> chanter</td>
 	</tr>
 	<tr>
 	  <th scope="row">fahren</th>
+	  <td> gehang</td>	  
 	  <td> gefahr</td>
 	  <td> rouler</td>
 	</tr>
 	<tr>
 	  <th scope="row">kennen</th>
+	  <td> kennt</td>	  
 	  <td> gekannt</td>
 	  <td> connaître</td>
 	</tr>
 	<tr>
 	  <th scope="row">rennen</th>
+	  <td> rannt</td>	  
 	  <td> gerannt</td>
 	  <td> courir</td>
 	</tr>
 	<tr>
 	  <th scope="row">génn</th>
+	  <td> gétt</td>	  
 	  <td> génn</td>
 	  <td> 1.devenir 2. donner </td>
 	</tr>
 	<tr>
+	  <th scope="row">froen</th>
+	  <td> fräät</td>	  
+	  <td> gefrot</td>
+	  <td> demander </td>
+	</tr>
+	<tr>
 	  <th scope="row">schloofen</th>
+	  <td> schlääft</td>	  
 	  <td> geschloof</td>
 	  <td> dormir </td>
 	</tr>
 	<tr>
 	  <th scope="row">hieren </th>
+	  <td> hiert</td>	  
 	  <td> gehuert</td>
 	  <td> entendre </td>
 	</tr>
 	<tr>
 	  <th scope="row"> leihen </th>
+	  <td> leiht</td>	  
 	  <td> geleen </td>
 	  <td> 1. être couché 2. se situer </td>
 	</tr>
 	<tr>
 	  <th scope="row"> machen </th>
-	  <td> gemach</td>
-	  <td> faire </td>
-	</tr>
-	<tr>
-	  <th scope="row"> machen </th>
+	  <td> micht </td>	  
 	  <td> gemach</td>
 	  <td> faire </td>
 	</tr>
 	<tr>
 	  <th scope="row"> sénn </th>
+	  <td> gehang</td>	  
 	  <td> gewenn </td>
 	  <td> être</td>
 	</tr>
 	<tr>
 	  <th scope="row"> frieren </th>
+	  <td> friert</td>	  
 	  <td> gefror </td>
 	  <td> geler </td>
 	</tr>
 	<tr>
 	  <th scope="row"> schlaan </th>
+	  <td> schléit </td>	  
 	  <td> geschlaan </td>
 	  <td> frapper </td>
 	</tr>
 	<tr>
 	  <th scope="row"> verbéiden </th>
+	  <td> verbéit </td>	  
 	  <td> verbuut </td>
 	  <td> interdire </td>
+	</tr>
+	<tr>
+	  <th scope="row"> werfen </th>
+	  <td> werft</td>	  
+	  <td> geworf </td>
+	  <td> jeter </td>
+	</tr>
+	<tr>
+	  <th scope="row"> lossen </th>
+	  <td> lisst </td>	  
+	  <td> geloss </td>
+	  <td> 1.laisser faire 2. faire faire </td>
+	</tr>
+	<tr>
+	  <th scope="row"> bénnen </th>
+	  <td> bénnt </td>	  
+	  <td> gebonn </td>
+	  <td> lier </td>
+	</tr>
+	<tr>
+	  <th scope="row"> essen </th>
+	  <td> esst </td>	  
+	  <td> gess </td>
+	  <td> manger </td>
+	</tr>
+	<tr>
+	  <th scope="row"> linen </th>
+	  <td> liint </td>	  
+	  <td> gelun </td>
+	  <td> mentir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> schwémmen </th>
+	  <td> schwémmt </td>	  
+	  <td> geschwomm </td>
+	  <td> nager </td>
+	</tr>
+	<tr>
+	  <th scope="row"> stéerwen </th>
+	  <td> stéerwt </td>	  
+	  <td> gestuerw </td>
+	  <td> mourir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> beissen </th>
+	  <td> beisst </td>	  
+	  <td> gebéss </td>
+	  <td> mordre </td>
+	</tr>
+	<tr>
+	  <th scope="row"> zwéngen </th>
+	  <td> zwéngt </td>	  
+	  <td> gezwong </td>
+	  <td> forcer </td>
+	</tr>
+	<tr>
+	  <th scope="row"> mänen </th>
+	  <td> mänt </td>	  
+	  <td> gemoont </td>
+	  <td> penser </td>
+	</tr>
+	<tr>
+	  <th scope="row"> verlieren </th>
+	  <td> verliert </td>	  
+	  <td> verluer </td>
+	  <td> penser </td>
+	</tr>
+	<tr>
+	  <th scope="row"> stéchen </th>
+	  <td> stécht </td>	  
+	  <td> gestoch </td>
+	  <td> penser </td>
+	</tr>
+	<tr>
+	  <th scope="row"> béijen </th>
+	  <td> béijt </td>	  
+	  <td> gebuu </td>
+	  <td> plier </td>
+	</tr>
+	<tr>
+	  <th scope="row"> drahn </th>
+	  <td> dréht </td>	  
+	  <td> gedrahn </td>
+	  <td> porter </td>
+	</tr>
+	<tr>
+	  <th scope="row"> lehn </th>
+	  <td> léht </td>	  
+	  <td> gelaat </td>
+	  <td> poser, mettre </td>
+	</tr>
+	<tr>
+	  <th scope="row"> sténken </th>
+	  <td> sténkt </td>	  
+	  <td> gestonk </td>
+	  <td> puer </td>
+	</tr>
+	<tr>
+	  <th scope="row"> holen </th>
+	  <td> hélt </td>	  
+	  <td> gehol </td>
+	  <td> prendre </td>
+	</tr>
+	<tr>
+	  <th scope="row"> kréin </th>
+	  <td> kréit </td>	  
+	  <td> kréin </td>
+	  <td> recevoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> bleiwen </th>
+	  <td> bleiwt </td>	  
+	  <td> bliww </td>
+	  <td> recevoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> greifen </th>
+	  <td> greift </td>	  
+	  <td> gegréff </td>
+	  <td> saisir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> spréngen </th>
+	  <td> spréngt </td>	  
+	  <td> gesprong </td>
+	  <td> sauter </td>
+	</tr>
+	<tr>
+	  <th scope="row"> peifen </th>
+	  <td> peift </td>	  
+	  <td> gepéff </td>
+	  <td> sauter </td>
+	</tr>
+	<tr>
+	  <th scope="row"> héwen </th>
+	  <td> héwt </td>	  
+	  <td> gehow </td>
+	  <td> lever </td>
+	</tr>
+	<tr>
+	  <th scope="row"> zéihen </th>
+	  <td> zéiht </td>	  
+	  <td> gezuh </td>
+	  <td> lever </td>
+	</tr>
+	<tr>
+	  <th scope="row"> schéissen </th>
+	  <td> schéisst </td>	  
+	  <td> geschoss </td>
+	  <td> lever </td>
+	</tr>
+	<tr>
+	  <th scope="row"> fällen </th>
+	  <td> fällt </td>	  
+	  <td> gefall </td>
+	  <td> tomber </td>
+	</tr>
+	<tr>
+	  <th scope="row"> fénnen </th>
+	  <td> fénnt </td>	  
+	  <td> gefonn </td>
+	  <td> trouver </td>
+	</tr>
+	<tr>
+	  <th scope="row"> kommen </th>
+	  <td> kémmt </td>	  
+	  <td> komm </td>
+	  <td> venir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> gesinn </th>
+	  <td> gesitt </td>	  
+	  <td> gesinn </td>
+	  <td> voir </td>
+	</tr>
+  </tbody>
+</table>
+
+<p>Conjugaison des verbes modaux:</p>
+
+<table class="table">
+  <thead>
+	<tr>
+	  <th scope="col">Infinitif</th>
+	  <th scope="col">Présent (ich,er)</th>
+	  <th scope="col">Participe passé</th>
+	  <th scope="col">Conditionnel</th>
+	  <th scope="col">Traduction</th>
+	</tr>
+  </thead>
+  <tbody>
+	<tr>
+	  <th scope="row"> kannen</th>
+	  <td> kann </td>
+	  <td> kinnten/gekonnt </td>
+	  <td> kinnt</td>
+	  <td> pouvoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> brauchen</th>
+	  <td> brauch </td>
+	  <td> briichten/gebriicht </td>	  
+	  <td> briicht</td>
+	  <td> avoir besoin </td>
+	</tr>
+	<tr>
+	  <th scope="row"> wéllen</th>
+	  <td> wéll </td>
+	  <td> wéllen/gewollt </td>
+	  <td> ich willtt</td>
+	  <td> vouloir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> brauchen</th>
+	  <td> braucht </td>
+	  <td> briichten/gebriicht </td>	  
+	  <td> dierft </td>
+	  <td> avoir le droit </td>
+	</tr>
+	<tr>
+	  <th scope="row"> wéssen </th>
+	  <td> wees </td>
+	  <td> wéssen/gewoscht </td>	  
+	  <td> wichtt </td>
+	  <td> savoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> sollen </th>
+	  <td> soll </td>
+	  <td> soll/sollen </td>	  
+	  <td> solltt </td>
+	  <td> devoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> mussen </th>
+	  <td> muss </td>
+	  <td> michten/gemicht </td>	  
+	  <td> misst </td>
+	  <td> devoir </td>
+	</tr>
+	<tr>
+	  <th scope="row"> maanen </th>
+	  <td> maan </td>
+	  <td> maanen/gemaant </td>	  
+	  <td> / </td>
+	  <td> avoir envie de </td>
 	</tr>
   </tbody>
 </table>
