Add ordre des mots

--- a/lecon_irreguliers_rsarrebourg.html
+++ b/lecon_irreguliers_rsarrebourg.html
@@ -21,6 +21,7 @@
 	  <th scope="row"> bìnde</th>
 	  <td> gebung </td>	  
 	  <td> g'bunde</td>
+	  <td> lier</td>
 	</tr>
 	<tr>
 	  <th scope="row"> bliwwe</th>
